Fix for urls going out of bounds

--- a/src/components/banshare/banshare.module.css
+++ b/src/components/banshare/banshare.module.css
@@ -41,6 +41,8 @@
     padding-bottom: 1rem;
     border-bottom: #3d4044 3px solid;
     text-align: center;
+    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 
 .banshareInfoWrapper section:last-child {
